Fixed horizontal fields alignment in invite-by-email modal

--- a/app/client/stylesheets/components/pu-row.sass
+++ b/app/client/stylesheets/components/pu-row.sass
@@ -26,6 +26,9 @@
             .pu-button-text
                 padding-right: 0
 
+        &.top
+            vertical-align: top
+
         &.bottom
             vertical-align: bottom
 
